commit para recuperar responsive perdido

--- a/index.html
+++ b/index.html
@@ -103,59 +103,49 @@
         </div>
         <div class="general-card">
           <div class="card-content">
-            <a href="#">
-              <div class="img-card">
-                <img
-                  src="img/imgProyectoCard1.svg"
-                  alt="Manos escribiendo un grafico"
-                />
-              </div>
-              <h3 class="title-card">Proyecto</h3>
-            </a>
+            <div class="img-card">
+              <img
+                src="img/imgProyectoCard1.svg"
+                alt="Manos escribiendo un grafico"
+              />
+            </div>
+            <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <a href="#">
-              <div class="img-card">
-                <img
-                  src="img/imgProyectoCard2.svg"
-                  alt="Manos en una computadora"
-                />
-              </div>
-              <h3 class="title-card">Proyecto</h3>
-            </a>
+            <div class="img-card">
+              <img
+                src="img/imgProyectoCard2.svg"
+                alt="Manos en una computadora"
+              />
+            </div>
+            <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <a href="#">
-              <div class="img-card">
-                <img
-                  src="img/imgProyectoCard3.svg"
-                  alt="Mujer en pose de yoga trabajando en la compu"
-                />
-              </div>
-              <h3 class="title-card">Proyecto</h3>
-            </a>
+            <div class="img-card">
+              <img
+                src="img/imgProyectoCard3.svg"
+                alt="Mujer en pose de yoga trabajando en la compu"
+              />
+            </div>
+            <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <a href="#">
-              <div class="img-card">
-                <img
-                  src="img/imgProyectoCard4.svg"
-                  alt="Madre trabajando en una mesa con su hija"
-                />
-              </div>
-              <h3 class="title-card">Proyecto</h3>
-            </a>
+            <div class="img-card">
+              <img
+                src="img/imgProyectoCard4.svg"
+                alt="Madre trabajando en una mesa con su hija"
+              />
+            </div>
+            <h3 class="title-card">Proyecto</h3>
           </div>
           <div class="card-content">
-            <a href="#">
-              <div class="img-card">
-                <img
-                  src="img/imgProyectoCard5.svg"
-                  alt="Mujer sentada trabajando en la compu"
-                />
-              </div>
-              <h3 class="title-card">Proyecto</h3>
-            </a>
+            <div class="img-card">
+              <img
+                src="img/imgProyectoCard5.svg"
+                alt="Mujer sentada trabajando en la compu"
+              />
+            </div>
+            <h3 class="title-card">Proyecto</h3>
           </div>
         </div>
       </section>
@@ -172,76 +162,19 @@
             <a
               class="redes-contactame"
               href="https://www.linkedin.com/in/maria-emilia-cabrera-582740115/"
-              target="_blank"
             >
-              <svg
-                width="30"
-                height="30"
-                viewBox="0 0 30 30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M11.0243 8.507C11.0241 8.96744 10.841 9.40894 10.5152 9.73436C10.1895 10.0598 9.74778 10.2425 9.28734 10.2422C8.82689 10.242 8.3854 10.0589 8.05997 9.73313C7.73455 9.40739 7.55186 8.96571 7.55209 8.50526C7.55232 8.04482 7.73546 7.60332 8.0612 7.2779C8.38695 6.95248 8.82863 6.76979 9.28907 6.77002C9.74952 6.77025 10.191 6.95338 10.5164 7.27913C10.8419 7.60488 11.0245 8.04655 11.0243 8.507ZM11.0764 11.5278H7.60418V22.3959H11.0764V11.5278ZM16.5625 11.5278H13.1076V22.3959H16.5278V16.6928C16.5278 13.5157 20.6684 13.2205 20.6684 16.6928V22.3959H24.0972V15.5122C24.0972 10.1563 17.9688 10.356 16.5278 12.9862L16.5625 11.5278Z"
-                  fill="#9CAFAA"
-                />
-                <circle cx="15" cy="15" r="14.5" stroke="#9CAFAA" />
-              </svg>
-
+              <i><img src="./img/linkedin.svg" alt="Logo Linkedin" /></i>
               <h4>Linkedin</h4>
             </a>
-            <a
-              class="redes-contactame"
-              href="emi.22692@gmail.com"
-              target="_blank"
-            >
-              <svg
-                width="30"
-                height="30"
-                viewBox="0 0 30 30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g clip-path="url(#clip0_19_684)">
-                  <path
-                    d="M23.3333 10.4563V20.1153C23.3333 20.7431 22.825 21.2514 22.1972 21.2514H19.5451V14.8125L15 18.2223L10.4549 14.8125V21.2521H7.80277C7.65351 21.2521 7.50572 21.2227 7.36784 21.1656C7.22995 21.1084 7.10468 21.0247 6.99917 20.9191C6.89366 20.8136 6.80999 20.6882 6.75294 20.5503C6.69588 20.4124 6.66657 20.2646 6.66666 20.1153V10.4563C6.66666 9.05144 8.27013 8.24935 9.39374 9.09241L10.4549 9.88894L15 13.2973L19.5451 9.88755L20.6062 9.09241C21.7292 8.25005 23.3333 9.05144 23.3333 10.4563Z"
-                    fill="#9CAFAA"
-                  />
-                </g>
-                <circle cx="15" cy="15" r="14.5" stroke="#9CAFAA" />
-                <defs>
-                  <clipPath id="clip0_19_684">
-                    <rect
-                      width="16.6667"
-                      height="16.6667"
-                      fill="white"
-                      transform="translate(6.66666 6.66675)"
-                    />
-                  </clipPath>
-                </defs>
-              </svg>
-
+            <a class="redes-contactame" href="emi.22692@gmail.com">
+              <i><img src="./img/gmail.svg" alt="Logo Gmail" /></i>
               <h4>Gmail</h4>
             </a>
             <a
               class="redes-contactame"
               href="https://www.behance.net/emiliacabrera"
-              target="_blank"
             >
-              <svg
-                width="30"
-                height="30"
-                viewBox="0 0 30 30"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle cx="15" cy="15" r="14.5" stroke="#9CAFAA" />
-                <path
-                  d="M22.8056 10.5278H17.4583V9H22.8056V10.5278ZM24.124 18.1667C23.7864 19.1574 22.5741 20.4583 20.2274 20.4583C17.8792 20.4583 15.9772 19.1376 15.9772 16.1233C15.9772 13.1365 17.7532 11.601 20.1526 11.601C22.5069 11.601 23.9445 12.9623 24.2585 14.982C24.3181 15.3685 24.3417 15.8895 24.331 16.6167H18.1993C18.2986 19.0696 20.8599 19.1467 21.704 18.1667H24.124ZM18.2528 15.1111H22.0455C21.9653 13.9294 21.1777 13.416 20.1533 13.416C19.0335 13.416 18.414 14.0027 18.2528 15.1111ZM10.9393 20.4492H6V9.01604H11.3113C15.4944 9.07792 15.5738 13.1747 13.3891 14.2915C16.0329 15.254 16.1215 20.4492 10.9393 20.4492ZM8.29167 13.5833H11.0294C12.9453 13.5833 13.2493 11.2917 10.7911 11.2917H8.29167V13.5833ZM10.882 15.875H8.29167V18.1789H10.8438C13.1775 18.1789 13.0347 15.875 10.882 15.875Z"
-                  fill="#9CAFAA"
-                />
-              </svg>
-
+              <i><img src="./img/behance.svg" alt="Logo Behance" /></i>
               <h4>Behance</h4>
             </a>
           </div>
@@ -283,13 +216,7 @@
             </label>
             <label for="Mensaje" class="input100">
               Mensaje
-              <textarea
-                name="Mensaje"
-                id="Mensaje"
-                placeholder="Escribi aqui tu mensaje"
-                required
-              >
-              </textarea>
+              <textarea name="Mensaje" id="Mensaje" required> </textarea>
             </label>
             <button class="button-formulario">Enviar</button>
           </form>
@@ -313,54 +240,14 @@
         <a
           class="ico-footer"
           href="https://www.linkedin.com/in/maria-emilia-cabrera-582740115/"
-          target="_blank"
-          ><svg
-            width="30"
-            height="30"
-            viewBox="0 0 30 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <circle cx="15" cy="15" r="14.5" stroke="black" />
-            <path
-              d="M10.4722 8.73698C10.472 9.19742 10.2889 9.63892 9.96311 9.96434C9.63737 10.2898 9.19569 10.4725 8.73524 10.4722C8.2748 10.472 7.8333 10.2889 7.50788 9.96311C7.18246 9.63737 6.99977 9.19569 7 8.73524C7.00023 8.2748 7.18336 7.8333 7.50911 7.50788C7.83486 7.18246 8.27653 6.99977 8.73698 7C9.19742 7.00023 9.63892 7.18336 9.96434 7.50911C10.2898 7.83486 10.4725 8.27653 10.4722 8.73698ZM10.5243 11.7578H7.05208V22.6259H10.5243V11.7578ZM16.0104 11.7578H12.5556V22.6259H15.9757V16.9227C15.9757 13.7457 20.1163 13.4505 20.1163 16.9227V22.6259H23.5451V15.7422C23.5451 10.3863 17.4167 10.5859 15.9757 13.2161L16.0104 11.7578Z"
-              fill="black"
-            />
-          </svg>
-        </a>
-        <a class="ico-footer" href="mailto:emi.22692@gmail.com" target="_blank"
-          ><svg
-            width="30"
-            height="30"
-            viewBox="0 0 30 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <circle cx="15" cy="15" r="14.5" stroke="black" />
-            <path
-              d="M23.6667 10.708V20.367C23.6667 20.9948 23.1583 21.5031 22.5306 21.5031H19.8785V15.0643L15.3333 18.474L10.7882 15.0643V21.5038H8.13611C7.98686 21.5038 7.83906 21.4744 7.70118 21.4173C7.5633 21.3602 7.43802 21.2764 7.33251 21.1708C7.22701 21.0653 7.14334 20.9399 7.08628 20.802C7.02923 20.6641 6.99991 20.5163 7 20.367V10.708C7 9.30315 8.60347 8.50106 9.72708 9.34412L10.7882 10.1406L15.3333 13.549L19.8785 10.1393L20.9396 9.34412C22.0625 8.50176 23.6667 9.30315 23.6667 10.708Z"
-              fill="black"
-            />
-          </svg>
-        </a>
-        <a
-          class="ico-footer"
-          href="https://www.behance.net/emiliacabrera"
-          target="_blank"
-          ><svg
-            width="30"
-            height="30"
-            viewBox="0 0 30 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <circle cx="15" cy="15" r="14.5" stroke="black" />
-            <path
-              d="M22.8056 10.5278H17.4583V9H22.8056V10.5278ZM24.124 18.1667C23.7864 19.1574 22.5741 20.4583 20.2274 20.4583C17.8792 20.4583 15.9772 19.1376 15.9772 16.1233C15.9772 13.1365 17.7532 11.601 20.1526 11.601C22.5069 11.601 23.9445 12.9623 24.2585 14.982C24.3181 15.3685 24.3417 15.8895 24.331 16.6167H18.1993C18.2986 19.0696 20.8599 19.1467 21.704 18.1667H24.124ZM18.2528 15.1111H22.0455C21.9653 13.9294 21.1777 13.416 20.1533 13.416C19.0335 13.416 18.414 14.0027 18.2528 15.1111ZM10.9393 20.4492H6V9.01604H11.3113C15.4944 9.07792 15.5738 13.1747 13.3891 14.2915C16.0329 15.254 16.1215 20.4492 10.9393 20.4492ZM8.29167 13.5833H11.0294C12.9453 13.5833 13.2493 11.2917 10.7911 11.2917H8.29167V13.5833ZM10.882 15.875H8.29167V18.1789H10.8438C13.1775 18.1789 13.0347 15.875 10.882 15.875Z"
-              fill="black"
-            />
-          </svg>
-        </a>
+          ><img src="./img/linkedin-footer.svg" alt="Logo Linkedin"
+        /></a>
+        <a class="ico-footer" href="emi.22692@gmail.com"
+          ><img src="./img/gmail-footer.svg" alt="Logo Gmail"
+        /></a>
+        <a class="ico-footer" href="https://www.behance.net/emiliacabrera"
+          ><img src="./img/behance-footer.svg" alt="Logo Behance"
+        /></a>
       </div>
     </footer>
   </body>
