Menu hamburguesa hecho

--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="nav">
-      <button class="button-secondary"><a href="#hola">HOLA</a></button>
-      <button class="button-secondary">
-        <a href="#conocimientos">CONOCIMIENTOS</a>
-      </button>
-      <button class="button-secondary">
-        <a href="#proyectos">PROYECTOS</a>
-      </button>
-      <button class="button-primary"><a href="#contacto">CONTACTO</a></button>
+    <header>
+      <nav class="nav" id="menu">
+        <div class="hamburguesa">
+          <a href="#menu" class="open"></a>
+          <a href="#" class="close"></a>
+        </div>
+        <div class="nav-menu">
+          <button class="button-secondary"><a href="#hola">HOLA</a></button>
+          <button class="button-secondary">
+            <a href="#conocimientos">CONOCIMIENTOS</a>
+          </button>
+          <button class="button-secondary">
+            <a href="#proyectos">PROYECTOS</a>
+          </button>
+          <button class="button-primary">
+            <a href="#contacto">CONTACTO</a>
+          </button>
+        </div>
+      </nav>
     </header>
     <main>
       <section class="hola" id="hola">
